...
            "state": "translated",
            "value": "好"
          }
        }
      }
    },
    "好物": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Shop"
          }
...
            "state": "translated",
            "value": "成为第一位分享经验的宠物主人"
          }
        }
      }
    },
    "我的": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Me"
          }
...
            "state": "translated",
            "value": "排序方式"
          }
        }
      }
    },
    "提交": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Submit"
          }
...
            "state": "new",
            "value": "新增照片 (%1$lld/%2$lld)"
          }
        }
      }
    },
    "新增診所": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Add Clinic"
          }
...
            "state": "translated",
            "value": "每月"
          }
        }
      }
    },
    "毛孩好物 (%lld)": {
      "comment": "The title of the navigation bar.",
      "isCommentAutoGenerated": true,
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
...
            "state": "translated",
            "value": "营业时间"
          }
        }
      }
    },
    "獸醫診所 (%lld)": {
      "comment": "A label at the top of the clinic list view that shows the number of clinics.",
      "isCommentAutoGenerated": true,
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
...
            "state": "translated",
            "value": "登录"
          }
        }
      }
    },
    "登入 / 註冊": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Sign In / Register"
          }
...
            "state": "translated",
            "value": "设置置顶、下架或还原诊所"
          }
        }
      }
    },
    "診所": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Clinics"
          }
...
            "state": "translated",
            "value": "诊所"
          }
        }
      }
    },
    "診所名稱": {
      "comment": "A field for entering the name of a clinic.",
      "isCommentAutoGenerated": true,
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
...
            "state": "translated",
            "value": "路线"
          }
        }
      }
    },
    "載入中…": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Loading…"
          }
...
            "state": "translated",
            "value": "显示名称"
          }
        }
      }
    },
    "首頁": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Home"
          }
...
